force-app/main/default/objects/Holder_Outputs__c/Holder_Outputs__c.object-meta.xml
<CustomObject>
    <label>Holder Outputs</label>
    <nameField>
        <label>Holder Output Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Outputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>