force-app/main/default/objects/Holder_Outputs__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>