force-app/main/default/objects/Holder_Outputs__c/fields/Lead_Time_Override__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Override__c</fullName>
    <label>Lead Time Override</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>