force-app/main/default/objects/Holder_Outputs__c/fields/OA_Overridden__c.field-meta.xml
<CustomField>
    <fullName>OA_Overridden__c</fullName>
    <label>OA Overridden</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>