force-app/main/default/objects/Holder_Outputs__c/fields/OB__c.field-meta.xml
<CustomField>
    <fullName>OB__c</fullName>
    <label>OB</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>