force-app/main/default/objects/Holder_Outputs__c/fields/OB_Overridden__c.field-meta.xml
<CustomField>
    <fullName>OB_Overridden__c</fullName>
    <label>OB Overridden</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>