force-app/main/default/objects/Holder_Outputs__c/fields/OW__c.field-meta.xml
<CustomField>
    <fullName>OW__c</fullName>
    <label>OW</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>