force-app/main/default/objects/Holder_Outputs__c/fields/OW_Overridden__c.field-meta.xml
<CustomField>
    <fullName>OW_Overridden__c</fullName>
    <label>OW Overridden</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>