force-app/main/default/objects/Holder_Outputs__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holders</label>
    <referenceTo>Holders__c</referenceTo>
    <relationshipLabel>Holder Outputs</relationshipLabel>
    <relationshipName>Holder_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>