force-app/main/default/objects/Holder_Outputs__c/fields/Total_Lead_Time_CDC_OHLD__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Time_CDC_OHLD__c</fullName>
    <label>Total_Lead_Time_CDC_OHLD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>